cluster/workload/selectme-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: selectme-api
  namespace: selectme-dev
  labels:
    app: selectme
    tier: api
    env: dev
spec:
  selector:
    app: selectme
    tier: api
    env: dev
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
